--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Shared/_Layout.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
                 <li class="nav2"><a href="@Url.Action("Strategy", "Home")">Strategy<br />Summary</a></li>
                 <li class="nav2"><a href="@Url.Action("Weekly", "Home")">Weekly<br />Summary</a></li>
                 <li class="nav3"><a href="@Url.Action("Creative", "Home")">Creative<br />Performance</a></li>
-                <li class="nav4"><a href="#">Top 50<br />Site List</a></li>
-                <li class="nav4"><a href="#">Lead<br />IDs</a></li>
+                <li class="nav4"><a href="@Url.Action("Site", "Home")">Top 50<br />Site List</a></li>
+                <li class="nav4"><a href="@Url.Action("Lead", "Home")">Lead<br />IDs</a></li>
             </ul>
         </div>
     </div>
