--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Lead.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Lead.cshtml
@@ -1,121 +1,46 @@
-﻿@model ClientPortal.Web.Models.UserInfo
+﻿@model ClientPortal.Web.Areas.Prog.Models.ReportVM
 
 @{
     ViewBag.Title = "Lead IDs";
 }
 
-@Html.Partial("_ClientBar", Model)
+@Html.Partial("_ClientBar", Model.UserInfo)
 
 <div id="page_content">
     <div id="container">
         <div id="page_content">
         
         <section>
-            <div class="heading"><p>Campaign to Date: 11/6/2015 thru 4/20/2016</p></div>
+            <div class="heading"><p>Month to Date: @Model.StartDate.ToShortDateString() thru @Model.EndDate.ToShortDateString()</p></div>
             <div class="grid">
 
-        <table class="grid" cellspacing="0" width="100%">
-        <thead>
-            <tr>
-                <th class="col_first">Timestamp</th>
-                <th>Conv Type</th>
-                <th>City</th>
-                <th>Country</th>
-                <th>Lead ID</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="grey_row">
-                <td class="col_first">3/8/2016 7:24:15 PM</td>
-                <td>ViewThru</td>
-                <td>Dallas</td>
-                <td>United States</td>
-                <td>39204</td>
-             
-            </tr>
-            <tr>
-               <td class="col_first">3/8/2016 7:06:26 PM</td>
-                <td>ViewThru</td>
-                <td>Pompano Beach</td>
-                <td>United States</td>
-                <td>39201</td>
-
-               
-            </tr>
-            <tr class="grey_row">
-                <td class="col_first">3/8/2016 7:04:05 PM/td>
-                <td>ViewThru</td>
-                <td>Bedford</td>
-                <td>United States</td>
-                <td>1457463842002</td>
-               
-            </tr>
-            <tr>
-                <td class="col_first">3/8/2016 6:49:26 PM</td>
-                <td>ViewThru</td>
-                <td>Puyallup</td>
-                <td>United States</td>
-                <td>39195</td>
-            
-            </tr>
-            <tr class="grey_row">
-                <td class="col_first">3/8/2016 5:17:56 PM</td>
-                <td>ViewThru</td>
-                <td>Winston Salem</td>
-                <td>United States</td>
-                <td>1457457475539</td>
-             
-            </tr>
-            <tr>
-                <td class="col_first">3/8/2016 4:45:42 PM</td>
-               <td>ViewThru</td>
-                <td>Tampa</td>
-                <td>United States</td>
-                <td>39169</td>
-               
-            </tr>
-            <tr class="grey_row">
-                  <td class="col_first">3/8/2016 4:33:14 PM</td>
-               <td>ViewThru</td>
-                <td>Roswell</td>
-                <td>United States</td>
-                <td>39168</td>
-            
-            </tr>
-            <tr>
-                 <td class="col_first">3/8/2016 4:16:17 PM</td>
-               <td>ViewThru</td>
-                <td>Aurora</td>
-                <td>United States</td>
-                <td>39164</td>
-               
-            </tr>
-            <tr class="grey_row">
-                 <td class="col_first">3/8/2016 3:25:22 PM</td>
-               <td>ViewThru</td>
-                <td>Winston Salem</td>
-                <td>United States</td>
-                <td>39152</td>
-               
-            </tr>
-            <tr>
-                <td class="col_first">3/8/2016 10:45:45 AM</td>
-                 <td>ViewThru</td>
-                <td>Bedford</td>
-                <td>United States</td>
-                <td>39138</td>
-           
-            </tr>
-            <tr class="grey_row">
-                <td class="col_first">3/8/2016 9:50:47 AM</td>
-                 <td>ViewThru</td>
-                <td>Cleveland</td>
-                <td>United States</td>
-                <td>39137</td>
-                
-            </tr>
-        </tbody>
-    </table>
+<table class="grid" cellspacing="0" width="100%">
+<thead>
+    <tr>
+        <th class="col_first">Timestamp</th>
+        <th>Conv Type</th>
+        <th>City</th>
+        <th>Country</th>
+        <th>Lead ID</th>
+    </tr>
+</thead>
+<tbody>
+@{
+    int i = 0;
+}
+@foreach (var lead in Model.LeadInfos)
+{
+    <tr class="@(i % 2 == 0 ? "grey_row" : "")">
+        <td class="col_first">@lead.Time</td>
+        <td>@lead.ConvType</td>
+        <td>@lead.City</td>
+        <td>@lead.Country</td>
+        <td>@lead.LeadID</td>
+    </tr>
+    i++;
+}
+</tbody>
+</table>
 
             </div>
         </section>
