--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Weekly.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Weekly.cshtml
@@ -1,4 +1,4 @@
-﻿@model ClientPortal.Web.Areas.Prog.Models.WeekSumVM
+﻿@model ClientPortal.Web.Areas.Prog.Models.ReportVM
 @{
     ViewBag.Title = "Weekly Summary";
 }
