--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Index.cshtml
@@ -4,6 +4,11 @@
     var mtd = Model.MTDStat;
     var prev = Model.LastMonthStat;
 }
+<style type="text/css">
+    .client_logo_exec {
+        background-image: url("@Url.Action("Logo", "Home")");
+    }
+</style>
 
 <div id="client_bar_exec">
 <div id="container">
