--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Shared/_ClientBar.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Shared/_ClientBar.cshtml
@@ -1,5 +1,10 @@
 ﻿@model ClientPortal.Web.Models.UserInfo
 
+<style type="text/css">
+    .client_logo {
+        background-image: url("@Url.Action("Logo", "Home")");
+    }
+</style>
 <div id="client_bar">
 	<div id="container">
 		<div class="client_logo"></div>
