--- a/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
@@ -117,8 +117,7 @@ body {
 	border-radius: 50%;
 	float: left;
 	margin-top: 20px;
-	/*background-image: url("http://www.directagents.com/preview/portal/img/logo_bevel.jpg");*/
-	background-image: url("/images/logo_seeso_200px.jpg");
+	/*background-image: url("");*/
 	background-position: center center;
 	background-size: contain;
 }
@@ -132,8 +131,7 @@ body {
 	background-color: #FFF;
 	border-radius: 50%;
 	margin-top: 40px;
-	/*background-image: url("http://www.directagents.com/preview/portal/img/logo_bevel_200x200.jpg");*/
-	background-image: url("/images/logo_seeso_200px.jpg");
+	/*background-image: url("");*/
 	background-position: center center;
 	background-size: contain;
 	margin-left:7%;
