Update CreativePerf - for Seeso

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_HelloPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_HelloPartial.cshtml
@@ -5,7 +5,7 @@
     if (Model) // HasLogo
     {
     <p style="text-align: center">
-        <img src="@Url.Action("Logo")" />
+        <img src="@Url.Action("Logo", "Home")" />
     </p>               
     }
     else
