--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Creative.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Creative.cshtml
@@ -9,54 +9,81 @@
 	<div id="container">
     	<div id="page_content">
             <section>
+                <div class="heading"><p>Campaign to Date: @Model.StartDate.ToShortDateString() thru @Model.EndDate.ToShortDateString()</p></div>
+                <div class="grid">
 
-<a id="aExpandAll" href="#" onclick="ExpandAll(true); return false">Expand All</a>
-<a id="aCollapseAll" style="display:none" href="#" onclick="ExpandAll(false); return false">Collapse All</a>
-
-<div class="heading"><p>Campaign to Date: @Model.StartDate.ToShortDateString() thru @Model.EndDate.ToShortDateString()</p></div>
-<ul id="panelbar">
+<table class="grid" cellspacing="0" width="100%">
+<thead>
+    <tr>
+        <th class="col_first">Creative</th>
+        <th>Media Spend</th>
+        <th>Impressions</th>
+        <th>Clicks</th>
+        <th>CTR</th>
+        <th>eCPC</th>
+        <th>Click Conv</th>
+        <th>View Conv</th>
+        <th>Total Conv</th>
+        <th>eCPA</th>
+        <th>Preview (Hover)</th>
+    </tr>
+</thead>
+<tbody>
 @{
-    bool first = true;
+    int i = 0;
 }
 @foreach (var stat in Model.Stats)
 {
-    <li class="@(first ? "k-state-active" : "")">
-        <i class="glyphicon glyphicon-minus"></i>@stat.AdName
-        <div>
-            <table class="grid3" cellspacing="0" width="100%">
-                <thead>
-                    <tr class="grey_row">
-                        <th class="col_first3">Media Spend</th>
-                        <th>Impressions</th>
-                        <th>Clicks</th>
-                        <th>CTR</th>
-                        <th>eCPC</th>
-                        <th>Click Conv</th>
-                        <th>View Conv</th>
-                        <th>Total Conv</th>
-                        <th>eCPA</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="grey_row">
-                        <td class="col_first3">@stat.MediaSpend.ToString("C")</td>
-                        <td>@stat.Impressions.ToString("N0")</td>
-                        <td>@stat.Clicks.ToString("N0")</td>
-                        <td>@stat.CTR.ToString("0.00%")</td>
-                        <td>@stat.eCPC.ToString("C")</td>
-                        <td>@(stat.ShowClickAndViewConv ? stat.PostClickConv.ToString("N0") : "n/a")</td>
-                        <td>@(stat.ShowClickAndViewConv ? stat.PostViewConv.ToString("N0") : "n/a")</td>
-                        <td>@stat.Conversions.ToString("N0")</td>
-                        <td>@stat.eCPA.ToString("C")</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </li>
-    first = false;
+    var creativeImage = "Seeso_300x600.jpg";
+    if (i % 3 > 0)
+    {
+        creativeImage = (i % 3 == 1) ? "Seeso_728x90.jpg" : "Seeso_Video.jpg";
+    }
+    <tr class="@(i % 2 == 0 ? "grey_row" : "")">
+        <td class="col_first">@stat.AdName</td>
+        <td>@stat.MediaSpend.ToString("C")</td>
+        <td>@stat.Impressions.ToString("N0")</td>
+        <td>@stat.Clicks.ToString("N0")</td>
+        <td>@stat.CTR.ToString("0.00%")</td>
+        <td>@stat.eCPC.ToString("C")</td>
+        <td>@stat.PostClickConv.ToString("N0")</td>
+        <td>@stat.PostViewConv.ToString("N0")</td>
+        <td>@stat.Conversions.ToString("N0")</td>
+        <td>@stat.eCPA.ToString("C")</td>
+        <td>
+            <a class="thumbnail" href="#">
+                <img src="~/Images/creativethumb.gif" alt="Bevel" border="0">
+                <span><img src="~/Images/@creativeImage"></span>
+            </a>
+        </td>
+    </tr>
+    i++;
 }
-</ul>
+</tbody>
+</table>
+<style type="text/css">
+    .grid td {
+        padding: 10px 5px;
+    }
+    .thumbnail span {
+        position: absolute;
+        padding: 0px;
+        /*left: -400px;*/
+        /*top: 100px;
+        right:100px;*/
+        border: 0px solid #666;
+        visibility: hidden;
+        color: black;
+        text-decoration: none;
+    }
+    .thumbnail:hover span {
+        visibility: visible;
+        top: 100px;
+        right: 100px;
+        }
+</style>
 
+                </div>
             </section>
         </div>
     </div>
@@ -65,9 +92,9 @@
 @section scripts {
 <script>
     $(document).ready(function () {
-        $("#panelbar").kendoPanelBar({
-            select: onSelect
-        });
+        //$("#panelbar").kendoPanelBar({
+        //    select: onSelect
+        //});
     });
 
     function onSelect(e) {
