--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/ProgAdmin/UploadStats.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/ProgAdmin/UploadStats.cshtml
@@ -29,7 +29,7 @@
 </form>
 
 <br />
-@Ajax.ActionLink("Cancel/Reset", "UploadStats", ajaxOptions)
+@Ajax.ActionLink("Cancel/Refresh", "UploadStats", ajaxOptions)
 </td></tr></table>
 
 <script>
