--- a/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
@@ -284,11 +284,11 @@ body {
 .grey_row {
 	background-color: #f4f4f4;
 }
-#exec_right{
+#exec_right {
 	width:65%;
 	float:right;
 }
-#footer{
+#footer {
 	background-color:#2A579F;
 	height:100%;
 	min-height:100px;
@@ -297,7 +297,7 @@ body {
 	width:100%;
 	float:left;
 }
-.conversions{
+.conversions {
 	background-color:#b9d342;
 	-moz-border-radius: 4px 4px 0 0;
 	-webkit-border-radius: 4px;
@@ -310,6 +310,10 @@ body {
 	font-size:18px;
 	border:0px;
 	text-align:center !important;
+}
+.convheader {
+    background-color: #b9d342;
+    color: #ffffff;
 }
 
 ul.k-panelbar .k-panelbar-expand,
