--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Creative.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Creative.cshtml
@@ -13,6 +13,19 @@
             stat.Url = baseUrl + creativeImage;
             j++;
         }
+    } else if (Model.UserInfo.ProgAdvertiser.Name == "Sephora") {
+        var baseUrl = Url.Content("~/Images/Demo/");
+        int j = 0;
+        foreach (var stat in Model.Stats)
+        {
+            var creativeImage = "seph1.jpg";
+            if (j % 4 > 0)
+            {
+                creativeImage = (j % 4 == 1) ? "seph2.jpg" : ((j % 4 == 2) ? "seph3.jpg" : "seph4.jpg");
+            }
+            stat.Url = baseUrl + creativeImage;
+            j++;
+        }
     }
     bool showHoverCol = Model.AnyUrls();
 }
