--- a/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
@@ -277,7 +277,7 @@ body {
 	border-left: 0px !important;
 	text-align: left !important;
 }
-#tblCreative .col_first {
+.gridcol_string {
     word-break: break-all;
 }
 .col_first2, .col_first3 {
@@ -313,10 +313,6 @@ body {
 	font-size:18px;
 	border:0px;
 	text-align:center !important;
-}
-.convheader {
-    background-color: #b9d342;
-    color: #ffffff;
 }
 
 ul.k-panelbar .k-panelbar-expand,
