--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Shared/_Layout.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Shared/_Layout.cshtml
@@ -20,8 +20,11 @@
             <ul class="navbar">
                 <li class="nav1"><a href="@Url.Action("Index", "Home")">Executive<br />Summary</a></li>
                 <li class="nav2"><a href="@Url.Action("Strategy", "Home")">Strategy<br />Summary</a></li>
-                <li class="nav2"><a href="@Url.Action("Weekly", "Home")">Weekly<br />Summary</a></li>
-                <li class="nav3"><a href="@Url.Action("Creative", "Home")">Creative<br />Performance</a></li>
+                <li class="nav3"><a href="@Url.Action("Weekly", "Home")">Weekly<br />Summary</a></li>
+                <li class="nav4"><a href="@Url.Action("Creative", "Home")">Creative<br />Performance</a></li>
+                <li class="logout">
+                    @Html.Partial("_LoginPartial", model: false)
+                </li>
             </ul>
         </div>
     </div>
@@ -30,8 +33,6 @@
 @RenderBody()
 
 <div id="footer">
-    &nbsp;
-    @Html.Partial("_LoginPartial", model: false)
 </div>
 @RenderSection("scripts", required: false)
 </body>
