--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Shared/_Layout.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
         <div class="logo">&nbsp;</div>
         <div id="cssmenu">
             <ul>
-                <li class="executive"><a href="@Url.Action("Index", "Home")">Executive<br />Summary</a></li>
-                <li class="strategy-summary"><a href="@Url.Action("Strategy", "Home")">Strategy<br />Summary</a></li>
-                <li class="weekly-summary"><a href="@Url.Action("Weekly", "Home")">Weekly<br />Summary</a></li>
-                <li class="creative-performance"><a href="@Url.Action("Creative", "Home")">Creative<br />Performance</a></li>
+                <li class="executive"><a href="@Url.Action("Index", "Home")">Executive Summary</a></li>
+                <li class="strategy-summary"><a href="@Url.Action("Strategy", "Home")">Strategy Summary</a></li>
+                <li class="weekly-summary"><a href="@Url.Action("Weekly", "Home")">Weekly Summary</a></li>
+                <li class="creative-performance"><a href="@Url.Action("Creative", "Home")">Creative Performance</a></li>
                 <li class="logout"><a href='#'>Logout</a></li>
             </ul>
         </div>
