--- a/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/progstyle.css
@@ -10,19 +10,19 @@ body {
 #header {
 	background: linear-gradient(90deg, #52AAE3 50%, #2d599d 50%);
 	height: 100px;
-	border-top: 4px solid #0d67ef;
+	border-top:none !important;
 	border-bottom: 1px solid #FFF;
 	z-index: 10;
 	box-shadow: 0px 3px 10px rgba(0,0,0,0.2);
 }
 #container {
 	width: 100%;
-	max-width: 1000px;
+	max-width:1050px !important;
 	margin: 0px auto;
 }
 .logo {
 	height: 100px;
-	width: 34%;
+	width: 26%;
 	background: url("../Images/da_logo.jpg") #52AAE3;
 	border-top: 4px solid #2d599d;
 	border-left: groove 2px #77C0E7;
@@ -32,65 +32,7 @@ body {
 	background-position: center center;
 	background-repeat: no-repeat;
 }
-.nav {
-	float: left;
-	width: 65.5%;
-	background-color: #2A579F;
-	height: 100px;
-}
-.navbar {
-	list-style-type: none;
-	margin: 0px !important;
-	padding: 0px !important;
-	text-align: left;
-}
-.navbar li {
-	border-left: 1px solid #3d6fbd;
-	border-right: 1px solid #1f447d;
-	width: 14.8%;
-	height: 75px !important;
-	display: inline-block;
-	margin-top: -4px;
-	float: left;
-	padding-top: 25px;
-	padding-left: 10px;
-}
-.navbar a {
-	color: #ffffff;
-	font-size: 14px;
-	line-height: 20px;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 300;
-	text-decoration: none;
-}
-.navbar a:active {
-	color: #ffffff;
-	font-size: 14px;
-	line-height: 20px;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 700;
-	text-decoration: none;
-}
-.nav1 {
-	border-top: 4px solid #B9D532
-}
-.nav2 {
-	border-top: 4px solid #9FC8FF
-}
-.nav3 {
-	border-top: 4px solid #F9EA12
-}
-.nav4 {
-	border-top: 4px solid #FF8A00
-}
-.logout {
-    float: left;
-    background: #2d599d url("../Images/glyphicon-off.png") 0% 30% no-repeat;
-	border-top: 4px solid #0d67ef;
-}
-.logout a {
-  padding: 25px 17px 0 17px;
-}
+
 #client_bar {
 	background-color: #EAEAEA;
 	height: 120px;
